# emergency_care_navigator

./: .gitignore  .vercelignore  BUILD_STATUS.md  CRASH_FIX.md  DATABASE_SETUP.md  DEPLOY.md  DEPLOYMENT_STRATEGY.md  ENV_SETUP_SIMPLE.md  ERROR_ANALYSIS.md  FINAL_FIX_GUIDE.md  GEMINI_SETUP.md  HOW_TO_RUN.md  KAGGLE_WRITEUP.md  LOCAL_VS_PRODUCTION.md  MCP_SUPABASE_SETUP.md  PRODUCTION_DEBUG.md  PRODUCTION_FIX.md  PRODUCTION_LOGIN_FIX.md  QUICKSTART.md  README.md  README_APP.md  REVIEW_SUMMARY.md  STEP_BY_STEP_SETUP.md  SUPABASE_ENV_SETUP.md  SUPABASE_SETUP_GUIDE.md  TROUBLESHOOTING.md  VERCEL_ENV_SETUP.md  emergencycarenavigator-agent-capstone.ipynb  emergencycarenavigator-agent-capstonea5272b947e (5).ipynb  emergencycarenavigator-agent-capstonea5272b947e.ipynb  emergencycarenavigator_standalone.py  pyproject.toml  requirements-kaggle.txt  requirements.txt  run.bat  run.sh  users.json  vercel.json  verify_build.sh
api/: __init__.py  app.py
app/: __init__.py  agents.py  api_server.py  auth.py  database.py  db_service.py  llm_client.py  memory.py  models.py  observability.py  tools.py
frontend/: README.md  SETUP.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/hospital/: page.tsx
frontend/app/login/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/requests/: page.tsx
frontend/app/sessions/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/triage/: page.tsx
frontend/components/auth/: protected-route.tsx
frontend/components/booking/: booking-dialog.tsx
frontend/components/facilities/: facilities-list.tsx  facility-card.tsx  facility-details-dialog.tsx
frontend/components/layout/: app-header.tsx  app-shell.tsx  app-sidebar.tsx  notifications-dropdown.tsx  search-modal.tsx
frontend/components/sbar/: sbar-panel.tsx
frontend/components/triage/: intake-form.tsx  triage-level-badge.tsx  triage-result-card.tsx
frontend/components/ui/: badge.tsx  card.tsx  dialog.tsx  input-file.tsx  toast.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/: api.ts
static/: index.html
