[project]
name = "emergencycarenavigator"
version = "1.0.0"
description = "EmergencyCareNavigator API"
requires-python = ">=3.9"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# Tell setuptools explicitly which Python packages to include so it doesn't
# try to auto-discover every top-level folder (frontend, static, uploads, etc.)
[tool.setuptools.packages.find]
include = ["app*", "api*"]

[tool.vercel]
app = "api.app:app"



